# SECS-SuperDARN

./: .gitignore  CMakeLists.txt  LICENSE  README.md  artificial_field.py  artificial_field_test.py  example_2024.py  pole_placement_histogram.py  setup.py  test_SECS_superDARN.py
SECSSD/: SECS.py  __init__.py  bridsonVariableRadius.py  perform_SECS.py
adaptive/: README.md  density.py  divergence.cpp  test_density.py  test_density_impl.py
adaptive/fill/: PNP.hpp  nanoflann.hpp  pnpwrapper.cpp
northern_2015_march_1/: 20150301.ade.a.v3.0.grid.nc  20150301.adw.a.v3.0.grid.nc  20150301.bks.v3.0.grid.nc  20150301.cve.v3.0.grid.nc  20150301.cvw.v3.0.grid.nc  20150301.fhe.v3.0.grid.nc  20150301.fhw.v3.0.grid.nc  20150301.han.v3.0.grid.nc  20150301.hok.v3.0.grid.nc  20150301.inv.v3.0.grid.nc  20150301.kap.v3.0.grid.nc  20150301.kod.c.v3.0.grid.nc  20150301.kod.d.v3.0.grid.nc  20150301.ksr.a.v3.0.grid.nc  20150301.ksr.b.v3.0.grid.nc  20150301.pgr.v3.0.grid.nc  20150301.pyk.v3.0.grid.nc  20150301.rkn.v3.0.grid.nc  20150301.sto.v3.0.grid.nc  20150301.wal.v3.0.grid.nc
southern_2015_march_1/: 20150301.bpk.v3.0.grid.nc  20150301.dce.v3.0.grid.nc  20150301.hal.v3.0.grid.nc  20150301.ker.v3.0.grid.nc  20150301.mcm.a.v3.0.grid.nc  20150301.mcm.b.v3.0.grid.nc  20150301.san.v3.0.grid.nc  20150301.sps.a.v3.0.grid.nc  20150301.sye.v3.0.grid.nc  20150301.sys.v3.0.grid.nc  20150301.tig.v3.0.grid.nc  20150301.zho.v3.0.grid.nc
superDARN_data_input_directory/: 20150301.cly.v3.0.grid.nc  20150301.sas.v3.0.grid.nc
